Fixed line breaks in chat messages

--- a/index.css
+++ b/index.css
@@ -38,6 +38,7 @@ p {
 	display: inline-block;
 
 	max-width: 230px;
+	white-space: pre-wrap;
 	word-wrap: break-word;
 
 	padding: 0.25em 0.6em;
